# ai-news-aggregator

./: README.md  main.py  pyproject.toml  requirements.txt
app/scrapers/: anthropicS.py  openaiS.py  youtube.py
app/services/: youtube.py
